<resources>
    <string name="app_name">Food-Planner</string>
    <string name="food_planner">Food-Planner</string>
    <string name="hi_wlcome_to">Hi... Wlcome to</string>
    <string name="welcom_to_login_page">welcom to login page</string>
    <string name="Email">E-mail</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="login">Login</string>
    <string name="welcomeworld">Welcome to our world,let\'s start with Food-Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="my_meals">My Meals</string>
    <string name="week_plan">Week Plan</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">userName</string>
    <string name="scrall">scrall</string>
    <string name="signinemail">SIGNIN WITHE-MAIL</string>
    <string name="sign_in_with_e_mail">Sign in With E-mail</string>
    <string name="sign_up_with_e_mail">Sign Up With E-mail</string>
    <string name="addFav" />
    <string name="addMealToFav">addMealToFav</string>
    <string name="trrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrhhhhhhhhhhhhhhhhhhtttttttttrrrrrrrrrrrrrrrrrrrrrrrrrhhhhhhhh">trrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrhhhhhhhhhhhhhhhhhhtttttttttrrrrrrrrrrrrrrrrrrrrrrrrrhhhhhhhh</string>
    <string name="todo">TODO</string>
    <string name="confire_password">Confire Password</string>
    <string name="confirm_password">confirm_password</string>
    <string name="signup">SignUp</string>
    <string name="confirmpassword">confirm Password</string>
    <string name="nameofmeal">nameOfMeal</string>
    <string name="settings">settings</string>
</resources>