<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.Login"
    >

    <TextView
        android:id="@+id/logintxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunitoextrabold"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:circularflow_angles=""
        />

    <TextView
        android:id="@+id/welcomtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunitomedium"
        android:text="@string/welcomeworld"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/logintxt"
        app:layout_constraintTop_toBottomOf="@+id/logintxt" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="294dp"
        android:layout_height="151dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomtxt">

        <EditText
            android:id="@+id/email_id"
            android:layout_width="293dp"
            android:layout_height="51dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <EditText
            android:id="@+id/password_id"
            android:layout_width="293dp"
            android:layout_height="51dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/edit_text_border"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/loginbtn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunitoextrabold"
        android:text="@string/Login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.206"
        android:background="@drawable/buttonstyle"
        />
</androidx.constraintlayout.widget.ConstraintLayout>