<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/meal_Item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/buttonwitecolorstyle"
    android:padding="5dp">

    <ImageView
        android:id="@+id/mealImage_id"
        android:layout_width="316dp"
        android:layout_height="163dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/mealName_id"
        android:layout_width="323dp"
        android:layout_height="0dp"
        android:layout_marginTop="44dp"
        android:text="@string/trrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrhhhhhhhhhhhhhhhhhhtttttttttrrrrrrrrrrrrrrrrrrrrrrrrrhhhhhhhh"
        app:layout_constraintEnd_toEndOf="@+id/mealImage_id"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="@+id/mealImage_id"
        app:layout_constraintTop_toBottomOf="@+id/mealImage_id" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:backgroundTint="@color/orange"
        android:clickable="true"
        android:contentDescription="@string/addMealToFav"
        android:focusable="true"
        app:elevation="15dp"
        app:layout_constraintEnd_toEndOf="@+id/mealImage_id"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/mealImage_id"
        app:layout_constraintTop_toTopOf="@+id/mealImage_id"
        app:srcCompat="@drawable/ic_round_bookmark_border_24"
        tools:ignore="ImageContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>