<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".Authentication.Login.Login_Fragment">

    <TextView
        android:id="@+id/logintxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nunitoextrabold"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcomtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunitomedium"
        android:text="@string/welcomeworld"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/logintxt"
        app:layout_constraintTop_toBottomOf="@+id/logintxt" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomtxt">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/welcome_anim"
            android:layout_width="178dp"
            android:layout_height="159dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="welcome.json"
            app:lottie_loop="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="296dp"
            android:layout_height="64dp"
            android:hint="@string/Email"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="@+id/welcome_anim"
            app:layout_constraintStart_toStartOf="@+id/welcome_anim"
            app:layout_constraintTop_toBottomOf="@+id/welcome_anim">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailValue_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColorHint="#757575" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordLayOut_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="296dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"

            android:hint="@string/Password"
            android:weightSum="1"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="@+id/emailLayout"
            app:layout_constraintStart_toStartOf="@+id/emailLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/PasswordValue_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn_id"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttonstyle"
            android:fontFamily="@font/nunitoextrabold"
            android:text="@string/Login"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/emailLayout"
            app:layout_constraintStart_toStartOf="@+id/emailLayout"
            app:layout_constraintTop_toBottomOf="@+id/PasswordLayOut_id"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>